<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff3c3c3c"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin1"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingBottom="@dimen/activity_vertical_margin1">


    <LinearLayout
        android:id="@+id/config_network"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@drawable/config_layout"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ssid_textView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ssid_name_label"
                android:textColor="@color/label_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ssid_editText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/security_textView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/security_name_label"
                android:textColor="@color/label_color"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/password_label"
                android:textColor="@color/label_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkBox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/show_password"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save_button"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/config_layout"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tethering_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/config_network"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/wifi_disabled" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tethering_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/tethering_on"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/ap_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />


    </LinearLayout>


</LinearLayout>
